optimised to final; refactor(JugadorPaintball): Fix index shifting bug using removeIf, modernization with getLast, and suppress unused warnings